--- a/services/api/package.json
+++ b/services/api/package.json
@@ -2,6 +2,9 @@
   "name": "api",
   "version": "1.0.0",
   "type": "module",
+  "scripts": {
+    "dev": "nodemon --legacy-watch --exec ts-node --transpile-only src/index.ts"
+  },
   "dependencies": {
     "bullmq": "^5.58.5",
     "dockerode": "^4.0.8",
@@ -9,6 +12,7 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   }
