--- a/services/worker/package.json
+++ b/services/worker/package.json
@@ -2,6 +2,9 @@
   "name": "worker",
   "version": "1.0.0",
   "type": "module",
+  "scripts": {
+    "dev": "ts-node-dev --respawn --transpile-only --poll src/index.ts"
+  },
   "dependencies": {
     "bullmq": "^5.58.5",
     "dockerode": "^4.0.8",
@@ -10,6 +13,7 @@
   "devDependencies": {
     "@types/dockerode": "^3.3.43",
     "@types/tar-fs": "^2.0.4",
+    "ts-node-dev": "^2.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   }
